fixed some z-index shenanigans

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -9,22 +9,26 @@
   }
 
 .headerLeft {
+    position: relative;
+
     display: flex;
     padding: 0px 0px 0px 40px;
-    z-index: 1;
-    background-color: white;
+    z-index: 0;
+
 
 
 }
 
 .headerRight {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 50%;
     padding: 0px 40px 0px 0px;
     z-index: 1;
-    background-color: white;
+    z-index: 1;
+
 
 }
 
@@ -35,11 +39,13 @@
 }
 
 .title {
+    position: relative;
     color: white;
     background-color: #04233F;
     letter-spacing: 2px;
     padding: 15px 20px 7px 20px;
     border-radius: 8px;
+    z-index: 0;
 }
 
 .menuGroup, .menuGroup2 {
@@ -57,7 +63,7 @@
     align-items: flex-start;
     flex-wrap: nowrap;
     padding: 80px 50px 10px 50px;
-    top: 20%;
+    top: 0%;
     /* text-overflow: nowrap; */
 }
 
