--- a/styles/mutable.css
+++ b/styles/mutable.css
@@ -5,9 +5,10 @@
     top: 0px;
     background-color: white;
     /* padding: 80px 50px 10px 50px; */
-    height: 50vh;
+    height: 100vh;
     width: 300px;
-    justify-content: space-around;
+    justify-content: flex-start;
+    /* z-index: 1; */
     transition: .5s;
 }
 
@@ -16,7 +17,7 @@
     /* display: flex;
     align-items: center;
      */
-    padding: 80px 50px 10px 50px;
+    /* padding: 80px 50px 10px 50px; */
     position: relative;
     width: 100%;
 }
@@ -42,6 +43,7 @@
     height: 5px;
     width: 60px;
     border-radius: 8px;
+    z-index: 2;
 }
 
 
@@ -111,11 +113,13 @@
 
 .mobileMenuButton>button, .mobileMenuButtonHide>button {
     border: none;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-color: white;
     height: 100%;
+    z-index: 2;
 }
 
 
@@ -123,17 +127,18 @@
     cursor: pointer;
 }
 
-.headerRightMobileHide  {
-    position: fixed;
-    right: 0px;
-    top: 0px;
-    background-color: white;
-    /* padding: 80px 50px 10px 50px; */
-    height: 50vh;
-    width: 0;
-    justify-content: space-around;
-    transition: .5s;
-}
+ .headerRightMobileHide  {
+        position: fixed;
+        right: 0px;
+        top: 0px;
+        background-color: white;
+        /* padding: 80px 50px 10px 50px; */
+        height: 50vh;
+        width: 0;
+        justify-content: space-around;
+        transition: .5s;
+        z-index: 1;
+    }
 
 @media screen and (max-width: 1000px) {
     .mobileMenuButton {
